--- a/src/views/reject.ejs
+++ b/src/views/reject.ejs
@@ -43,7 +43,7 @@
       />
       <!-- <h2>Reject Leave Application</h2> -->
       <p>Hello <strong><%=username %></strong>,</p>
-      <p>Your Reject Application</p>
+      <p>Your leave Application is Reject</p>
       <p>Start Date: <strong><%=startDate %></strong></p>
       <p>End Date: <strong><%=endDate %></strong></p>
       <p>
